
2017-04-27  Sergey Kashyrin <ska@kiska.net>

	* stub