@@ -1,3 +1,5 @@
+2018-08-07 Sergey Kashyrin <ska@kiska.net>
+	* For level 49 on little-endian automatically changing COMP/COMP-4 to COMP-5
 
 2017-04-27  Sergey Kashyrin <ska@kiska.net>
 
